[maven-release-plugin] prepare release ion-index-api-0.1.0

--- a/rest/specs/pom.xml
+++ b/rest/specs/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <groupId>com.connexta.search</groupId>
         <artifactId>index-api-rest</artifactId>
-        <version>0.1.0-SNAPSHOT</version>
+        <version>0.1.0</version>
     </parent>
 
     <name>Index API :: REST Specification</name>
