--- a/rest/servers/pom.xml
+++ b/rest/servers/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <groupId>com.connexta.search</groupId>
         <artifactId>index-api-rest</artifactId>
-        <version>0.1.0</version>
+        <version>0.1.1-SNAPSHOT</version>
     </parent>
 
     <name>Index API :: REST Servers</name>
