--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <groupId>com.connexta.search</groupId>
         <artifactId>index-api</artifactId>
-        <version>0.1.1-SNAPSHOT</version>
+        <version>0.1.1</version>
     </parent>
 
     <name>Index API :: REST API</name>
