--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 
     <groupId>com.connexta.search</groupId>
     <artifactId>index-api</artifactId>
-    <version>0.1.1</version>
+    <version>0.1.2-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <properties>
@@ -52,7 +52,7 @@
         <connection>scm:git:https://github.com/connexta/ion-index-api.git</connection>
         <developerConnection>scm:git:https://github.com/connext/ion-index-api.git
         </developerConnection>
-        <tag>ion-index-api-0.1.1</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <distributionManagement>
