--- a/rest/specs/pom.xml
+++ b/rest/specs/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <groupId>com.connexta.search</groupId>
         <artifactId>index-api-rest</artifactId>
-        <version>0.1.1</version>
+        <version>0.1.2-SNAPSHOT</version>
     </parent>
 
     <name>Index API :: REST Specification</name>
