--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,10 @@
             <id>releases</id>
             <url>https://artifacts.codice.org/content/repositories/ion-releases/</url>
         </repository>
+        <repository>
+            <id>snapshots</id>
+            <url>https://artifacts.codice.org/content/repositories/ion-snapshots/</url>
+        </repository>
     </distributionManagement>
 
     <repositories>
